fixed scrollbar issues on ios

--- a/src/components/AddressBook/style.scss
+++ b/src/components/AddressBook/style.scss
@@ -36,6 +36,7 @@
     position: relative;
     flex: 1 1 auto;
     overflow: auto;
+    z-index: 1;
   }
 
   &__Item{
